--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     id: 'mapbox.streets',
     accessToken: 'pk.eyJ1Ijoicm9zYWUiLCJhIjoiY2pidW5rdHo3MXIyczJ4bnh2cWp1OWEwZSJ9.Nj-OKYdjBRXNs50cbPGBDA'
 }).addTo(mymap);
-
+  </script>
    
 </body>
 </html>
